welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:6: error: ')' expected but integer literal found.
else if(Math.abs(n)>89 && Math.abs()n<101){
                                      ^nearHundred:6: error: ';' expected but ')' found.
else if(Math.abs(n)>89 && Math.abs()n<101){
                                         ^